# VIN_DECODER

./: app.py  blackbook_service.py  pyproject.toml
static/: script.js  style.css
templates/: admin.html  index.html
